# foxglove_bridge-release

./: .clang-format  .dockerignore  .flake8  .gitattributes  .prettierignore  0001-Override-FetchContent-flag.patch  AGENTS.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Container.mk  Dockerfile  Dockerfile.ros  Makefile  README.md  debian.store  docker-compose.netem-egress.yml  docker-compose.netem-livekit.yml  docker-compose.netem-perlink.yml  docker-compose.netem.yml  docker-compose.yaml  eslint.config.mjs  jest.config.json  package.json  package.xml  patches.conf  pyproject.toml  releaser_history.json  rpm.store  rustfmt.toml  tracks.yaml  tsconfig.json
c/: Cargo.toml  README.md  build.rs  cbindgen.prelude.toml  cbindgen.toml
c/include/foxglove-c/: foxglove-c.h
c/src/: arena.rs  bytes.rs  channel.rs  channel_descriptor.rs  cloud_sink.rs  connection_graph.rs  fetch_asset.rs  gateway.rs  generated_types.rs  lib.rs  logging.rs  parameter.rs  parameter_handler.rs  playback_control_request.rs  playback_state.rs  server.rs  service.rs  sink_channel_filter.rs  system_info.rs  tests.rs  util.rs
c/src/parameter/: tests.rs
cpp/: .clang-tidy  CMakeLists.txt  Doxyfile  Makefile  README.md  sanitize-ignorelist.txt  test_callbacks.cpp
cpp/cmake/: FindOrFetch.cmake  LiveKitConfig.cmake.in  foxglove-c-imports.cmake  foxglove-sdk-dist-config.cmake  foxglove-sdkConfig.cmake.in  foxglove-sources.cmake  foxglove-static-platform-links.cmake
cpp/examples/agent/src/: main.cpp
cpp/examples/auto-serialize/src/: jsonschema.hpp  main.cpp
cpp/examples/connection-graph/src/: main.cpp
cpp/examples/custom-protobuf/: CMakeLists.txt  Dockerfile  README.md  main.cpp
cpp/examples/custom-protobuf/protos/: fruit.proto
cpp/examples/foxglove-schemas/src/: main.cpp
cpp/examples/mcap/src/: main.cpp
cpp/examples/message-filtering/src/: main.cpp
cpp/examples/param-server/src/: main.cpp
cpp/examples/quickstart/src/: main.cpp
cpp/examples/remote-access-connection-graph/src/: main.cpp
cpp/examples/rgb-camera-visualization/: README.md  main.cpp
cpp/foxglove/docs/: conf.py  index.rst  pyproject.toml  version.py
cpp/foxglove/src/: callback_forwarders.cpp  callback_forwarders.hpp  channel.cpp  connection_graph.cpp  fetch_asset.cpp  foxglove.cpp  mcap.cpp  mcap_internal.hpp  messages.cpp  parameter.cpp  parameter_handler.cpp  remote_access.cpp  schemas.cpp  server.cpp  service.cpp  system_info.cpp  websocket.cpp
cpp/foxglove/tests/: .clang-tidy  test_arena.cpp  test_channel.cpp  test_mcap.cpp  test_messages.cpp  test_parameter.cpp  test_schemas.cpp  test_server.cpp  test_system_info.cpp  test_websocket.cpp
cpp/foxglove_data_loader/: Makefile  README.md
cpp/foxglove_data_loader/examples/: data_loader.cpp
python/foxglove-schemas-flatbuffer/: README.md  pyproject.toml
python/foxglove-schemas-protobuf/: README.md  pyproject.toml
python/foxglove-sdk/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  conftest.py  custom_build.py  pyproject.toml
python/foxglove-sdk-examples/cloud/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/custom-protobuf/: Makefile  README.md  fruit_pb2.py  fruit_pb2.pyi  main.py  pyproject.toml
python/foxglove-sdk-examples/logging-context/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/message-filtering/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/python-logging/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/quickstart/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/remote-access/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/rgb-camera-visualization/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/so100-visualization/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/so101-visualization/: README.md  main.py  pyproject.toml  requirements.txt
python/foxglove-sdk-examples/write-mcap-file/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/ws-connection-graph/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/ws-param-server/: README.md  main.py  pyproject.toml
python/foxglove-sdk/notebook-frontend/: package.json  tsconfig.json  widget.ts
python/foxglove-sdk/src/: cloud_sink.rs  errors.rs  generated.rs  lib.rs  logging.rs  mcap.rs  remote_access.rs  remote_common.rs  schemas_wkt.rs  sink_channel_filter.rs  system_info.rs  websocket.rs
rust/foxglove/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
rust/foxglove/src/: app_url.rs  channel.rs  channel_builder.rs  cloud_sink.rs  context.rs  convert.rs  crypto.rs  decode.rs  encode.rs  lib.rs  library_version.rs  log_macro.rs  log_sink_set.rs  mcap_writer.rs  messages.rs  messages_wkt.rs  metadata.rs  protobuf.rs  protocol.rs  remote_access.rs  remote_common.rs  runtime.rs  schema.rs  schemas.rs  schemas_wkt.rs  sink.rs  sink_channel_filter.rs  stream.rs  system_info.rs  tests.rs  testutil.rs  throttler.rs  time.rs  websocket.rs  websocket_client.rs  websocket_server.rs
rust/foxglove_data_loader/: Cargo.toml  README.md
rust/foxglove_data_loader/src/: lib.rs  tests.rs
rust/foxglove_data_loader/wit/: loader.wit
rust/foxglove_derive/: Cargo.toml  README.md
rust/foxglove_derive/src/: lib.rs
rust/foxglove_derive/tests/: chrono_fields_test.rs  container_dedup_test.rs  deterministic_order_test.rs  enum_fields_test.rs  foxglove_schema_test.rs  newtype_fields_test.rs  scalar_fields_test.rs  string_fields_test.rs  struct_fields_test.rs
rust/foxglove_proto_gen/: Cargo.toml
rust/foxglove_proto_gen/src/: bin.rs  lib.rs
rust/remote_access_tests/: Cargo.toml  NETEM.md
rust/remote_access_tests/src/: config.rs  frame.rs  lib.rs  livekit_token.rs  mock_listener.rs  mock_server.rs  test_helpers.rs
rust/remote_access_tests/tests/: auth_test.rs  livekit_test.rs  netem_perlink_test.rs  netem_test.rs  parameter_test.rs  service_test.rs  status_test.rs
rust/remote_data_loader_backend_conformance/: Cargo.toml
rust/remote_data_loader_backend_conformance/src/: lib.rs  main.rs  manifest_schema.json
(+880 files in other folders)
