[workspace]
resolver = "2"
members = [
  "c",
  "rust/foxglove",
  "rust/foxglove_derive",
  "rust/foxglove_proto_gen",
  "rust/foxglove_data_loader",
  "rust/examples/*",
  "python/foxglove-sdk",
]

exclude = [
  "rust/examples/rgb_camera_visualization"
]

[workspace.package]
version = "0.16.2"
edition = "2021"
rust-version = "1.83.0"
repository = "https://github.com/foxglove/foxglove-sdk"
license = "MIT"

[workspace.dependencies]
bytes = "1.9.0"
log = "0.4.22"
mcap = { version = "0.24", default-features = false }
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1", features = ["log"] }
tracing-test = "0.2.5"

[workspace.lints.rust]
# Group to warn about changes coming in Rust 2024 edition. Having this on will
# make a future transition smoother. Lowering the priority allows overriding
# several lints in the group that shouldn't be automatically enabled.
rust-2024-compatibility = { level = "warn", priority = 0 }

# This lint flags all tail expressions that drop tempraries with a custom Drop
# implementation. We'll manually review these we upgrade to 2024, but generally
# don't expect any of our code to depend on drop-ordering in this way.
#
# See also: https://doc.rust-lang.org/edition-guide/rust-2024/temporary-tail-expr-scope.html
tail-expr-drop-order = { level = "allow", priority = 1 }

# This lint is extremely conservative in preserving the if-let scoping from the
# 2021 edition, which typically isn't necessary. We'll manually review this when
# we upgrade to 2024, but generally don't expect any of our code to depend on
# the broader scope of 2021's if-let bindings.
#
# See also: https://doc.rust-lang.org/edition-guide/rust-2024/temporary-if-let-scope.html
if-let-rescope = { level = "allow", priority = 1 }

# This lint explicitly preserves the 2021 semantics of the `expr` fragment in
# macro rules, which would only matter if we had special-case patterns for
# `const` or `_` expressions. We'll manually review this when we upgrade to
# 2024.
#
# See also: https://doc.rust-lang.org/edition-guide/rust-2024/macro-fragment-specifiers.html
edition-2024-expr-fragment-specifier = { level = "allow", priority = 1 }

[workspace.lints.clippy]
assigning_clones = "warn"
borrow_as_ptr = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
needless_for_each = "warn"
no_mangle_with_rust_abi = "warn"
option_as_ref_cloned = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
unnecessary_literal_bound = "warn"
unused_async = "warn"
