[workspace]
resolver = "2"
members = [
  "c",
  "rust/foxglove",
  "rust/foxglove_derive",
  "rust/foxglove_proto_gen",
  "rust/foxglove_data_loader",
  "rust/examples/*",
  "python/foxglove-sdk",
]

exclude = [
  "rust/examples/rgb_camera_visualization"
]

[workspace.package]
version = "0.15.2"
edition = "2021"
rust-version = "1.83.0"
repository = "https://github.com/foxglove/foxglove-sdk"
license = "MIT"

[workspace.dependencies]
bytes = "1.9.0"
log = "0.4.22"
mcap = { version = "0.23", default-features = false }
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = "0.27"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1", features = ["log"] }
tracing-test = "0.2.5"

[workspace.lints.clippy]
assigning_clones = "warn"
borrow_as_ptr = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
needless_for_each = "warn"
no_mangle_with_rust_abi = "warn"
option_as_ref_cloned = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
unnecessary_literal_bound = "warn"
unused_async = "warn"
