<?xml version="1.0"?>
<package format="3">
    <name>foxglove_bridge</name>
    <version>3.4.3</version>
    <description>ROS Foxglove Bridge</description>
    <license>MIT</license>
    <url type="website">https://github.com/foxglove/foxglove-sdk</url>
    <author email="ros-tooling+foxglove_bridge@foxglove.dev">Foxglove</author>
    <maintainer email="ros-tooling+foxglove_bridge@foxglove.dev">Foxglove</maintainer>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- ROS 2 runtime dependencies -->
    <depend>ament_index_cpp</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>rosx_introspection</depend>
    <!-- Workaround: rosx_introspection incorrectly exports sensor_msgs and
         geometry_msgs as transitive dependencies. Remove once upstream
         releases a fix (https://github.com/facontidavide/rosx_introspection/pull/39) -->
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <!-- Test dependencies -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>std_msgs</test_depend>
    <test_depend>std_srvs</test_depend>
    <test_depend>test_msgs</test_depend>
    <test_depend>asio</test_depend>
    <test_depend>libwebsocketpp-dev</test_depend>
    <test_depend>nlohmann-json-dev</test_depend>

    <!-- Common dependencies -->
    <build_depend>ros_environment</build_depend>

    <depend>rcl_interfaces</depend>
    <!-- Service event (<Srv>_Event) schemas synthesized by the message definition cache
         reference service_msgs/msg/ServiceEventInfo, resolved via the ament index. -->
    <exec_depend condition="$ROS_DISTRO != humble">service_msgs</exec_depend>
    <depend>rcpputils</depend>
    <depend>rcutils</depend>
    <depend>resource_retriever</depend>
    <depend>rosgraph_msgs</depend>
    <depend>rosidl_typesupport_introspection_cpp</depend>
    <depend>std_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
