[package]
name = "foxglove_c"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "foxglove"
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
tracing.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
foxglove = { path = "../rust/foxglove", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
foxglove = { path = "../rust/foxglove", default-features = false, features = [
  "live_visualization",
  "lz4",
  "tls",
  "zstd",
  "agent",
] }
base64 = "0.22.1"
bitflags = "2.9.0"
env_logger = "0.11.5"
log.workspace = true
mcap.workspace = true

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
maplit = "1.0.2"
